@@ -44,7 +44,7 @@ applications.
 
 =head1 DESCRIPTION
 
-Since this module tries to stick very closely to the C API the documentation
+Since this module tries to stick very closely to the C API, the documentation
 found at
 
   http://developer.gnome.org/doc/API/2.0/libgnome/index.html
