@@ -1,3 +1,13 @@
+2003/11/15 12:13 (+0100) kaffeetisch
+
+	* Gnome2.pm: Add a comma.
+
+	* xs/BonoboDock.xs
+	* xs/GnomeDruid.xs
+	* xs/GnomeIconList.xs
+	* xs/GnomeIconLookup.xs: Add API documentation mainly for things
+	that return lists.
+
 2003/11/14 19:50 (+0100) kaffeetisch
 
 	* xs/GnomeIconList.xs
